# cvre

./: .gitignore  CITATION.cff  README.md  STATUS.md  checksums.sha256  pyproject.toml  requirements-zvec.txt
.github/workflows/: ci.yml  demo.yml
artifacts/demos/neg_to_pos/: README.md  (+2 more)
certs/cvre/: CVRE_CERT.pub
cvre/: ann_oracle.py  verify.py
demos/neg_to_pos/: data.py
docs/: DEMO.md  SPEC_STATUS.md
docs/objectives/: approx_nn.md
docs/obstructions/: OBSTR_CAPACITY_INSUFF.md  OBSTR_CAPACITY_INSUFF_witness.md  OBSTR_RADIUS_INDIFF.md  OBSTR_RADIUS_INDIFF_witness.md  README.md
docs/spec/: cvre_v0_2.md  pos_verifier_math.md
paper/: cvre_short.tex
paper/docs/: V0_3_PLANNING.md
paper/submission/: ARTIFACTS.md  GOVERNANCE.md
phase-transition-pnp/meta/: ENVIRONMENT.txt  LOGGING_SCHEMA.md  MANIFEST.json
phase-transition-pnp/tools/: update_manifest.py  validate_logs.py
schemas/: capacity_ledger.schema.json  cvre-cert-v1.schema.json  cvre-cert-v1.schema.sha256  cvre-cert-v2.schema.json  urf_cert_neg.schema.json
src/: capacity_check.py  verify.py
src/backends/: zvec_backend.py
src/cvre/: cli.py  verify.py
tests/: sample_cert_neg_capacity.json  sample_cert_pos.json  test_certificate_smoke.py  test_certificate_verifier.py  test_sample_cert_neg.json  test_sample_cert_pos.json  test_schema_migration.py  test_toy_cert_neg_r0.json  test_toy_cert_neg_r0.json.minisig  test_toy_cert_pos_r1.json  test_toy_cert_pos_r1.json.minisig  toy_cert_pos_r1.json
tools/: demo_toy_dataset.py  hash_artifact.py  zvec_smoke.py
tools/cvre/: verify_minisign.sh
(+13 files in other folders)
